--- a/css/lecture2/examples.txt/cssmargins.html
+++ b/css/lecture2/examples.txt/cssmargins.html
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body>
-        <h1 > skill </h1>
+        <h1 > skill India </h1>
         <div> html,CSS,JS,REACTJS,JS node, Python, Java </div>
         
         
